--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,12 @@ code {
   transform: translate(-50%, -50%);
   background-color: rgb(245, 248, 250);
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   text-align: center;
+}
+
+.modal-body {
+  max-height: calc(100vh);
+  overflow-y: auto;
 }
 
